tree-sitter/grammar.js
    source_file: $ => seq(
      optional($._sep),
      optional(seq(
        $.sequence,
        optional($._sep),
      )),
    ),

    // One step of a sequence: a type-alias declaration, a chain, or a leading `//=`
    // assertion — the trailing form with a line break, observing the previous step's value
    // (or, at the start of a sequence, the block's input). An alias is scoped to the
    // sequence's enclosing scope, so one written in a block or function body is local to it.
    _step: $ => choice($.type_alias, $.chain, $.assertion),

    // The sequence separator: one or more semicolons/newlines (they are synonyms),
    // collapsing runs. This is where the flow short-circuits on nil and binding scope
    // advances. (Commas are *not* step separators — they appear only inside brackets.)
    _sep: _ => prec.right(repeat1(choice('\n', ';'))),

    // One or more newlines: a continuation point inside an unfinished construct.
    _nl: _ => prec.right(repeat1('\n')),

    // An ordinary `//` comment — any run except the `//=` that opens a step assertion.
    // (No lookahead in tree-sitter regexes, so the exclusion is spelled out: the comment
    // is empty, or its first character is something other than `=`.)
    comment: _ => token(seq('//', optional(/[^=\n][^\n]*/))),

    // A step assertion: `//= P` matches the step's value against the pattern `P` in
    // debug builds. It reads as a comment but the pattern is real syntax, and it ends
    // there: a prose note after one is an ordinary `comment`, picked up by the `extras`.
    // Like a comment, an assertion terminates its line — the real parser rejects code
    // after it; this grammar stays permissive there, as it does for binding patterns.
    assertion: $ => seq('//=', field('pattern', $._pattern)),

    // ----------------------------------------------------------------- type aliases

    // A named alias (`'point = ...`) or the module's nameless default-type marker
    // (`' = ...` / `'<'t> = ...`), where the name is a bare `'`.
    annotation_name: _ => token(seq(':', /[a-z][a-z0-9_]*[?!]?/)),

    // One block-prefix annotation: `:key value`, the value an ordinary chain terminated by
    // semicolon/newline. Dynamic precedence prefers this reading over a source-less
    // annotation-retrieval access at the start of a block.
    annotation: $ => prec.dynamic(1, seq(field('key', $.annotation_name), $.chain)),

    sequence: $ => seq(
      $._step,
      repeat(seq($._sep, $._step)),
    ),

    // A chain is a sequence of `term`s joined by a **mandatory** `~>`; the value flows
    // left→right through them, with nil passing through (no short-circuit — that is the
    // sequence separator's job). Whitespace does NOT join chain terms (it binds a juxtaposed
    // application argument to its head instead — see `application`). The `~>` doubles as an
    // explicit line continuation: a chain ends at a bare newline, but a newline followed by
    // `~>` continues it.
    chain: $ => seq(
      // `pattern = chain` binding. The real parser distinguishes a binding (`x = e`, `=`
      // space-surrounded) from an in-chain match (`e =x`, `=` glued) by spacing; tree-sitter
      // treats whitespace as `extras`, so when the leading term is a binding target followed
      // by `=`, prefer the binding reading via dynamic precedence.
      optional(prec.dynamic(1, seq(field('binding', $._binding_target), '=', optional($._nl)))),
      $._term,
      // `//= P` assertions may end any of the chain's lines, so they precede a continuation
      // as well as ending the chain. (Comments are `extras`, so they need no mention.)
      repeat(seq(repeat(seq(optional($._nl), $.assertion)), $._pipe, $._term)),
      // A trailing assertion on the same line (`5 ~> double //= 10`). The leading form on its
      // own line is a `_step`, so it is not repeated here.
      repeat($.assertion),
    ),

    // The chain separator / line continuation: a mandatory `~>`, with optional newlines
    // around it. (The lexer prefers the longer `~>` over a bare `~` ripple, so `f ~> g`
    // separates rather than applying `f` to a ripple argument.)
    _pipe: $ => seq(optional($._nl), '~>', optional($._nl)),

    // A term is a primary, optionally applied to a single argument by juxtaposition.
    _term: $ => choice($.application, $._primary),

    // Juxtaposed application: an *applicable* head and a single primary argument. In the
    // real parser the two are separated by horizontal whitespace (`f x`, `add [3, 4]`,
    // `^f [~, 1]`, `~ [args]`, `@f x`); here that gap is just skipped `extras`, and because
    // a newline is significant (not `extras`) the argument can't cross the newline that ends
    // a chain. Exactly one argument: `f x y` is a syntax error. Mirrors `term` in
    // quiver-compiler/src/parser.rs.
    application: $ => seq(
      field('function', $._applicable),
      field('argument', $._primary),
    ),

    // The heads that may take a juxtaposed argument: a *sourced* access (a variable, `$`,
    // `~`, an import member, a tail call), a builtin, or a spawn (`@f`). A bare `.field`
    // accessor (a source-less `access`) is deliberately excluded — `.f x` is an error — so
    // the applicable access form is the sourced one only.
    _applicable: $ => choice(
      alias($._sourced_access, $.access),
      $.builtin,
      $.tail_call,
      $.spawn,
    ),

    // The forms valid as the target of a chain binding (`x = ...`, `[a, b] = ...`,
    // `(add, mul) = ...`, `('bin)ip = ...`, `* = ...`). A bare type or literal is never a
    // binding target, which keeps bindings distinct from type aliases. (Ascribed targets
    // once mis-resolved `$N` accesses via GLR — that was the missing dotless-`$`-sugar
    // rule, fixed alongside it.)
    _binding_target: $ => choice(
      $.identifier,
      $.pattern_tuple,
      $.pattern_partial,
      $.pattern_ascription,
      $.star,
      $.placeholder,
    ),

    _primary: $ => choice(
      $.multiline_string,
      $.string,
      $.integer,
      $.binary,
      $.builtin,
      $.process_ref,
      $.spawn,
      $.self,
      $.bind_match,
      $.select,
      $.state,
      $.tail_call,
      $.tuple,
      $.function,
      $.block,
      $.spread_update,
      $.dialect,
      $.access,
    ),

    // Name-preserving spread-update: `a[..., y]` / `~[..., y]` / `$conn[..., y]`. The source
    // is an access path — a variable path, a parameter or its fields (sigil runs included),
    // or a ripple field. The bracket is adjacent (no space) and begins with a spread,
    // distinguishing it from `a [..., y]` (two terms) and from a plain spread tuple
    // `[...a, y]`. The result inherits the source tuple's name.
    spread_update: $ => seq(
      field('source', choice($.ripple, $.identifier, $.parameter)),
      repeat(seq('.', field('field', choice($.identifier, $.index)))),
      token.immediate('['), optional($._nl),
      $.spread,
      repeat(seq(optional($._nl), ',', optional($._nl), $._field)),
      optional(seq(optional($._nl), ',')),
      optional($._nl), ']',
    ),

    // ----------------------------------------------------------------------- access

    // A variable/parameter/ripple/import optionally followed by `.field`/`.0` accessors,
    // or a leading accessor with no source (`.name` as a chain step). Split into a *sourced*
    // and a *leading* form: only the sourced form is an applicable application head (see
    // `_applicable`), matching the real parser's `access.source.is_some()` test.
    access: $ => choice(
      $._sourced_access,
      $._leading_access,
    ),

    _sourced_access: $ => seq(field('source', $._access_source), repeat($._accessor), optional($.type_arguments)),
    _leading_access: $ => seq($._leading_accessor, repeat($._accessor), optional($.type_arguments)),

    // A source-less access reads off the flowing value (`.name`, `:key` as a chain step).
    // The leading annotation sigil is an ordinary token; *trailing* annotation accessors
    // must be glued (token.immediate), matching the real parser: `x:key` retrieves, while
    // `x :key` is two terms.
    parameter: $ => seq(token(/\$+/), optional(field('field', choice(
      alias($._identifier_immediate, $.identifier),
      alias($._index_immediate, $.index),
    )))),
    _index_immediate: _ => token.immediate(/\d+/),
    ripple: _ => '~',

    _accessor: $ => choice(
      seq('.', field('field', choice($.identifier, $.index))),
      field('annotation', alias($._annotation_name_immediate, $.annotation_name)),
      field('annotation', alias($._checked_annotation_immediate, $.checked_annotation)),
    ),
    index: _ => /\d+/,

    // `%num`, `%mathx/vec`. The `/` path separator is immediate so a later `mod / x`
    // (with surrounding spaces) is not mistaken for part of the module path.
    import: $ => seq('%', $.identifier, repeat(seq(token.immediate('/'), $.identifier))),

    // -------------------------------------------------------------------- dialects

    // A dialect invocation `%mod{ raw }`: an import path glued (no whitespace) to a
    // braced raw-text region. The `{` is immediate, so the spaced `%mod { ... }` is
    // *not* a dialect (it stays an import followed by a block). The content is not
    // parsed as Quiver — the grammar only finds the matching close brace, mirroring
    // `dialect_term` in quiver-compiler/src/parser.rs: braces must balance, except
    // inside `"…"` string literals (where a `\` escapes the next byte, so `\"`
    // doesn't close the string) or when escaped as `\{`/`\}`; outside strings `\"`
    // is an escaped literal quote (so an unpaired `"` is writable).
    dialect: $ => seq(
      field('module', $.import),
      token.immediate('{'),
      optional(field('content', $.dialect_content)),
      '}',
    ),

    // The raw content: plain text, escaped braces, strings (in which braces don't
    // count) and balanced nested brace groups. The text token's lexical precedence
    // keeps it ahead of the whitespace/comment `extras`, which would otherwise eat
    // content (a comment token could even swallow a closing `}`).
    dialect_content: $ => repeat1($._dialect_chunk),

    _dialect_chunk: $ => choice(
      $._dialect_text,
      $._dialect_escape,
      $._dialect_backslash,
      $._dialect_string,
      $._dialect_braces,
    ),

    builtin: $ => prec.right(seq(token(/__[a-z][a-zA-Z0-9_]*__/), optional($.type_arguments))),

    // Tail calls: `^` (self), `^name`, `^name.field`, `^.field`, and `^~` (tail-call the
    // flowing value). A tail call is an applicable head (see `_applicable`), so it may take a
    // juxtaposed argument — `^f [~, 1]` becomes an `application`.
    tail_call: $ => prec.right(seq(
      '^',
      optional(choice($.ripple, field('function', $.identifier))),
      repeat($._accessor),
    )),

    // A bare `@` referring to the current process. Lower precedence than `spawn`, which
    // claims every `@` with a target glued to it.
    function: $ => seq(
      '#',
      optional($.type_parameters),
      optional(field('parameter', $._type)),
      optional(seq(optional($._nl), '->', optional($._nl), field('return', $._type))),
      optional($.block),
    ),

    // ----------------------------------------------------------------------- blocks

    // A block may open with an annotation prefix (`:key value` steps, semicolon/newline
    // separated), attaching to the value the braces denote; an annotation-only block
    // (`{ :error X }`) is identity-plus-attach and has no branches.
    block: $ => seq(
      '{', optional($._nl),
      choice(
        seq(
          $.annotation,
          repeat(seq($._sep, $.annotation)),
          optional(seq($._sep, $._block_branches)),
        ),
        $._block_branches,
      ),
      optional($._nl),
      '}',
    ),

    _block_branches: $ => seq(
      optional(seq('|', optional($._nl))),
      $.branch,
      repeat(seq(optional($._nl), '|', optional($._nl), $.branch)),
    ),

    // A branch is either condition-consequence (`… => …`) or a plain sequence; the
    // `condition`/`consequence` fields exist only on the former — a bare branch's body
    // is not a condition.
    branch: $ => choice(
      seq(
        field('condition', $.sequence),
        optional($._nl), '=>', optional($._nl),
        field('consequence', $.sequence),
      ),
      $.sequence,
    ),

    // ----------------------------------------------------------------------- tuples

    // `Name[...]` (immediate bracket) is a named tuple. A bare tuple is not an applicable
    // head, so `Name [...]` (with a space) is not a juxtaposed application — it needs a `~>`
    // between the terms.
    tuple: $ => choice(
      seq(field('name', $.tuple_name), immBracketed($, '[', $._field, ']')),
      bracketed($, '[', $._field, ']'),
      // Punning forms: `(a, b)` / `Foo(a, b)`, one or more puns and nothing else. Written
      // out rather than via `bracketed` because an empty `()` is not a tuple — it has no
      // name to pun, and nil is `[]`.
      seq(
        field('name', $.tuple_name),
        token.immediate('('), optional($._nl), commaSep1($, $.pun), optional($._nl), ')',
      ),
      seq('(', optional($._nl), commaSep1($, $.pun), optional($._nl), ')'),
      field('name', $.tuple_name),
    ),

    // A punned tuple entry: an access path standing for both a field label and its value,
    // so `(a, p.x)` builds `[a: &a, x: &p.x]`. Rooted at a variable, the parameter, or an
    // import; the label is the path's final named segment, so an index or annotation step
    // cannot end one, and a ripple root is not punnable.
    pun: $ => prec.right(seq(
      field('source', choice($.identifier, $.parameter, $.import)),
      repeat(seq('.', field('field', $.identifier))),
    )),

    _field: $ => choice(
      $.named_field,
      $.spread,
      $.chain,
    ),

    named_field: $ => seq(field('name', $.identifier), ':', optional($._nl), $.chain),
    // `...` (the flowing value), or a sourced `...a.b` / `...$conn` / `...~.f` — the same
    // access-path sources as a spread-update's head, glued to the dots.
    spread: $ => seq('...', optional(seq(
      field('source', choice($.identifier, $.parameter, $.ripple)),
      repeat(seq('.', field('field', choice($.identifier, $.index)))),
    ))),

    // --------------------------------------------------------------------- patterns

    bind_match: $ => seq('=', $._pattern),

    _pattern: $ => choice(
      $.pattern_pin,
      $.pattern_ascription,
      $.multiline_string,
      $.string,
      $.pattern_tuple,
      $.pattern_partial,
      $.pattern_or,
      $.module_type,
      $.type_identifier,
      $.self_default_type,
      $._paren_type,
      $.integer,
      $.binary,
      $.star,
      $.placeholder,
      $.identifier,
    ),

    // A pin: `&` + an access path rooted at a variable (`&x`, `&x.y.0`) or the parameter
    // (`&$`, `&$x`, `&$0.y` — the parameter rule carries the glued first-accessor sugar).
    // Field/index steps only: a pin compares by value, so annotation retrieval has no
    // place in its target.
    _identifier_immediate: _ => token.immediate(/[a-z][a-zA-Z0-9_]*\??!?/),
    // `*` binds every named field; `Name*` additionally requires the tuple's name. The `*`
    // is glued to the name, as a tuple pattern's name is glued to its bracket.
    pattern_tuple: $ => choice(
      seq(field('name', $.tuple_name), immBracketed($, '[', $._pattern_field, ']')),
      bracketed($, '[', $._pattern_field, ']'),
      field('name', $.tuple_name),
    ),

    _pattern_field: $ => choice(
      seq(field('name', $.identifier), ':', optional($._nl), $._pattern),
      $._pattern,
    ),

    self_default_type: $ => seq("'", optional($.type_arguments)),

    type_arguments: $ => immBracketed($, '<', $._type, '>'),

    identifier: _ => /[a-z][a-zA-Z0-9_]*\??!?/,
