tree-sitter/test/corpus/assertions.txt
==================
trailing assertion
==================

5 ~> double //= 10

---

(source_file
  (sequence
    (chain
      (integer)
      (access
        source: (identifier))
      (assertion
        pattern: (integer)))))

==================
assertion inside a block
==================

#[] {
  %list{ 1, 2, 3 } ~> sum [~] //= 6
}

---

(source_file
  (sequence
    (chain
      (function
        (tuple_type)
        (block
          (branch
            (sequence
              (chain
                (dialect
                  (import
                    (identifier))
                  (dialect_content))
                (application
                  (access
                    (identifier))
                  (tuple
                    (chain
                      (access
                        (ripple)))))
                (assertion
                  (integer))))))))))

==================
stacked leading assertions
==================

double 5
//= 10
//= ('int)

---

(source_file
  (sequence
    (chain
      (application
        function: (access
          source: (identifier))
        argument: (integer)))
    (assertion
      pattern: (integer))
    (assertion
      pattern: (type_identifier
        name: (type_name)))))

==================
assertion on a binding with a prose note
==================

x = double 3 //= 6 // the value, not the binding's verdict

---

(source_file
  (sequence
    (chain
      binding: (identifier)
      (application
        function: (access
          source: (identifier))
        argument: (integer))
      (assertion
        pattern: (integer))))
  (comment))

==================
assertions along a chain's lines
==================

1 //= 1
~> %num.add [~, 2] //= 3

---

(source_file
  (sequence
    (chain
      (integer)
      (assertion
        pattern: (integer))
      (application
        function: (access
          source: (import
            (identifier))
          field: (identifier))
        argument: (tuple
          (chain
            (access
              source: (ripple)))
          (chain
            (integer))))
      (assertion
        pattern: (integer)))))

==================
comments and leading assertions in a continuation gap
==================

1 // the head
//= 1
~> double

---

(source_file
  (sequence
    (chain
      (integer)
      (comment)
      (assertion
        pattern: (integer))
      (access
        source: (identifier)))))

==================
assertion at the start of a block
==================

double = #'int {
  //= ('int)
  %num.mul [~, 2]
}

---

(source_file
  (sequence
    (chain
      binding: (identifier)
      (function
        parameter: (type_identifier
          name: (type_name))
        (block
          (branch
            (sequence
              (assertion
                pattern: (type_identifier
                  name: (type_name)))
              (chain
                (application
                  function: (access
                    source: (import
                      (identifier))
                    field: (identifier))
                  argument: (tuple
                    (chain
                      (access
                        source: (ripple)))
                    (chain
                      (integer))))))))))))

==================
comments that are not assertions
==================

// = a match in a comment
//!a failure expectation, which only `quiv test` reads
//
5

---

(source_file
  (comment)
  (comment)
  (comment)
  (sequence
    (chain
      (integer))))
