tree-sitter/test/corpus/expressions.txt
==================
juxtaposed application
==================

add [3, 4]

---

(source_file
  (sequence
    (chain
      (application
        function: (access
          source: (identifier))
        argument: (tuple
          (chain
            (integer))
          (chain
            (integer)))))))

==================
chain with pipe operator
==================

5 ~> double ~> increment

---

(source_file
  (sequence
    (chain
      (integer)
      (access
        source: (identifier))
      (access
        source: (identifier)))))

==================
named tuple and fields
==================

Point[x: 1, y: 2]

---

(source_file
  (sequence
    (chain
      (tuple
        name: (tuple_name)
        (named_field
          name: (identifier)
          (chain
            (integer)))
        (named_field
          name: (identifier)
          (chain
            (integer)))))))

==================
string with escape
==================

"hi\n"

---

(source_file
  (sequence
    (chain
      (string
        (escape_sequence)))))

==================
string with escaped brace
==================

"body \{ margin: 0 }"

---

(source_file
  (sequence
    (chain
      (string
        (escape_sequence)))))

==================
binary and integer
==================

[<0a1b>, -17]

---

(source_file
  (sequence
    (chain
      (tuple
        (chain
          (binary))
        (chain
          (integer))))))

==================
empty binary
==================

<>

---

(source_file
  (sequence
    (chain
      (binary))))

==================
grouped binary
==================

<6a09e667 bb67ae85>

---

(source_file
  (sequence
    (chain
      (binary))))

==================
binary written across lines
==================

k = <
  428a2f98 71374491
  b5c0fbcf e9b5dba5
>

---

(source_file
  (sequence
    (chain
      binding: (identifier)
      (binary))))

==================
glued angle brackets are type arguments, spaced ones a binary
==================

f<'int> <0a>

---

(source_file
  (sequence
    (chain
      (application
        function: (access
          source: (identifier)
          (type_arguments
            (type_identifier
              name: (type_name))))
        argument: (binary)))))

==================
a type argument named in hex digits is not a binary
==================

f<ABC> 1

---

(source_file
  (sequence
    (chain
      (application
        function: (access
          source: (identifier)
          (type_arguments
            (tuple_type
              name: (tuple_name))))
        argument: (integer)))))

==================
spread
==================

a[..., y: 3]

---

(source_file
  (sequence
    (chain
      (spread_update
        source: (identifier)
        (spread)
        (named_field
          name: (identifier)
          (chain
            (integer)))))))

==================
sourced spreads
==================

$conn[..., buf: 9]
a.inner[..., y: 5]
B[...$c.q, y: 3]

---

(source_file
  (sequence
    (chain
      (spread_update
        source: (parameter
          field: (identifier))
        (spread)
        (named_field
          name: (identifier)
          (chain
            (integer)))))
    (chain
      (spread_update
        source: (identifier)
        field: (identifier)
        (spread)
        (named_field
          name: (identifier)
          (chain
            (integer)))))
    (chain
      (tuple
        name: (tuple_name)
        (spread
          source: (parameter
            field: (identifier))
          field: (identifier))
        (named_field
          name: (identifier)
          (chain
            (integer)))))))

==================
ripple
==================

5 ~> [~, 1]

---

(source_file
  (sequence
    (chain
      (integer)
      (tuple
        (chain
          (access
            source: (ripple)))
        (chain
          (integer))))))

==================
builtin and access
==================

math.add [1, 2] ~> __integer_multiply__ [~, 3]

---

(source_file
  (sequence
    (chain
      (application
        function: (access
          source: (identifier)
          field: (identifier))
        argument: (tuple
          (chain
            (integer))
          (chain
            (integer))))
      (application
        function: (builtin)
        argument: (tuple
          (chain
            (access
              source: (ripple)))
          (chain
            (integer)))))))

==================
multi-line string
==================

"""
    hello
    """

---

(source_file
  (sequence
    (chain
      (multiline_string))))

==================
multi-line string with line continuation
==================

"""
    one \
    two
    """

---

(source_file
  (sequence
    (chain
      (multiline_string))))

==================
multi-line string with escaped triple quote
==================

"""
    before \"""
    after
    """

---

(source_file
  (sequence
    (chain
      (multiline_string))))

==================
string with interpolation hole
==================

"a \{ b } {x}"

---

(source_file
  (sequence
    (chain
      (string
        (escape_sequence)
        (interpolation
          (branch
            (sequence
              (chain
                (access
                  source: (identifier))))))))))

==================
string hole containing a nested string
==================

"nested {"quoted" ~> f} end"

---

(source_file
  (sequence
    (chain
      (string
        (interpolation
          (branch
            (sequence
              (chain
                (string)
                (access
                  source: (identifier))))))))))

==================
multi-line string with interpolation hole
==================

"""
    hello {name} \{ literal }
    """

---

(source_file
  (sequence
    (chain
      (multiline_string
        (interpolation
          (branch
            (sequence
              (chain
                (access
                  source: (identifier))))))))))

==================
ripple application
==================

~ [1, 2]

---

(source_file
  (sequence
    (chain
      (application
        function: (access
          source: (ripple))
        argument: (tuple
          (chain
            (integer))
          (chain
            (integer)))))))

==================
builtin application
==================

__integer_add__ [3, 4]

---

(source_file
  (sequence
    (chain
      (application
        function: (builtin)
        argument: (tuple
          (chain
            (integer))
          (chain
            (integer)))))))

==================
a function named as an argument
==================

map [xs, double]

---

(source_file
  (sequence
    (chain
      (application
        function: (access
          source: (identifier))
        argument: (tuple
          (chain
            (access
              source: (identifier)))
          (chain
            (access
              source: (identifier))))))))

==================
chained juxtaposed applications
==================

double 5 ~> add [~, 1]

---

(source_file
  (sequence
    (chain
      (application
        function: (access
          source: (identifier))
        argument: (integer))
      (application
        function: (access
          source: (identifier))
        argument: (tuple
          (chain
            (access
              source: (ripple)))
          (chain
            (integer)))))))

==================
missing chain arrow is an error
:error
==================

5 double

---

(source_file)

==================
juxtaposition takes a single argument
:error
==================

f x y

---

(source_file)

==================
explicit type application
==================

id<'int> 42

---

(source_file
  (sequence
    (chain
      (application
        function: (access
          source: (identifier)
          (type_arguments
            (type_identifier
              name: (type_name))))
        argument: (integer)))))

==================
explicit type application on an import member and a name
==================

%iter.fold<'int, Str['bin]> [xs, 0, f]
~> id<'int>

---

(source_file
  (sequence
    (chain
      (application
        function: (access
          source: (import
            (identifier))
          field: (identifier)
          (type_arguments
            (type_identifier
              name: (type_name))
            (tuple_type
              name: (tuple_name)
              (type_identifier
                name: (type_name)))))
        argument: (tuple
          (chain
            (access
              source: (identifier)))
          (chain
            (integer))
          (chain
            (access
              source: (identifier)))))
      (access
        source: (identifier)
        (type_arguments
          (type_identifier
            name: (type_name)))))))

==================
field punning
==================

r = (a, p.x, $y, %num.add)

---

(source_file
  (sequence
    (chain
      binding: (identifier)
      (tuple
        (pun
          source: (identifier))
        (pun
          source: (identifier)
          field: (identifier))
        (pun
          source: (parameter
            field: (identifier)))
        (pun
          source: (import
            (identifier))
          field: (identifier))))))

==================
named field punning
==================

Foo(a)

---

(source_file
  (sequence
    (chain
      (tuple
        name: (tuple_name)
        (pun
          source: (identifier))))))
